# ncadtools

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
ncadtoollib/: CMakeLists.txt  NGBaseBlock.cpp  NGCachedString.cpp  NGDFile.cpp  NGDesign.cpp  NGInputStream.cpp  NGLogBase.cpp  NGLogBlock.cpp  NGLogPrim.cpp  NGNetwork.cpp  NGNonPrimitive.cpp  NGObject.cpp  NGPhysBlock.cpp  NGPin.cpp  NGPinPrimitive.cpp  NGPrimitive.cpp  NGProperty.cpp  NGPropertySet.cpp  NGSignal.cpp  NGStream.cpp  NGStringCache.cpp  NGWire.cpp
ncadtoollib/include/ncadtoollib/: NGBaseBlock.h  NGCachedString.h  NGCountedArray.h  NGDFile.h  NGDesign.h  NGInputStream.h  NGLogBase.h  NGLogBlock.h  NGLogPrim.h  NGNetwork.h  NGNonPrimitive.h  NGObject.h  NGPhysBlock.h  NGPin.h  NGPinPrimitive.h  NGPrimitive.h  NGProperty.h  NGPropertySet.h  NGSignal.h  NGStream.h  NGStringCache.h  NGTaggedUnion.h  NGWire.h
ngd2v/: CMakeLists.txt  NGDToVerilogConverter.cpp  NGDToVerilogConverter.h  main.cpp  windowsStringConversions.cpp  windowsStringConversions.h
