add_library(ncadtoollib STATIC
	include/ncadtoollib/NGBaseBlock.h
	include/ncadtoollib/NGCachedString.h
	include/ncadtoollib/NGCountedArray.h
	include/ncadtoollib/NGDesign.h
	include/ncadtoollib/NGDFile.h
	include/ncadtoollib/NGInputStream.h
	include/ncadtoollib/NGObject.h
	include/ncadtoollib/NGPhysBlock.h
	include/ncadtoollib/NGPin.h
	include/ncadtoollib/NGPinPrimitive.h
	include/ncadtoollib/NGPrimitive.h
	include/ncadtoollib/NGLogBase.h
	include/ncadtoollib/NGLogBlock.h
	include/ncadtoollib/NGLogPrim.h
	include/ncadtoollib/NGNetwork.h
	include/ncadtoollib/NGNonPrimitive.h
	include/ncadtoollib/NGProperty.h
	include/ncadtoollib/NGPropertySet.h
	include/ncadtoollib/NGSignal.h
	include/ncadtoollib/NGStream.h
	include/ncadtoollib/NGStringCache.h
	include/ncadtoollib/NGTaggedUnion.h
	include/ncadtoollib/NGWire.h
	NGBaseBlock.cpp
	NGCachedString.cpp
	NGCountedArray.cpp
	NGDesign.cpp
	NGDFile.cpp
	NGInputStream.cpp
	NGLogBase.cpp
	NGLogBlock.cpp
	NGLogPrim.cpp
	NGNetwork.cpp
	NGNonPrimitive.cpp
	NGObject.cpp
	NGPhysBlock.cpp
	NGPin.cpp
	NGPinPrimitive.cpp
	NGPrimitive.cpp
	NGProperty.cpp
	NGPropertySet.cpp
	NGSignal.cpp
	NGStream.cpp
	NGStringCache.cpp
	NGTaggedUnion.cpp
	NGWire.cpp
)
target_include_directories(ncadtoollib PUBLIC include)
set_target_properties(ncadtoollib PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED TRUE)